FIxe style bleed on quote section

--- a/source/stylesheets/views/homepage/_quote_section.scss
+++ b/source/stylesheets/views/homepage/_quote_section.scss
@@ -4,7 +4,7 @@
   height: 45%;
   min-height: 450px;
   overflow: hidden;
-  background-image: linear-gradient(120deg, #16144f 0%, #030c76 100%);
+  background-image: linear-gradient(120deg, #000000 0%, #030c76 100%);
   position: relative;
 
   img.hero {
@@ -16,6 +16,7 @@
     top: 0;
     left: 0;
     z-index: 1;
+    padding-bottom: 0;
     @media (min-width: 2500px) {
       object-position: center -450px;
     }
